# API-Gerenciamento-escolar

./: .coverage  .dockerignore  .env  .gitignore  =0.24.0  Dockerfile  Dockerfile.simple  Makefile  QUICK-START.md  README.md  RENDER-DEPLOY.md  SETUP-CI-CD.md  base.py  crud.py  database.py  docker-compose.prod.yml  docker-compose.yml  docker-hub-setup.md  env.example  env.test  install.py  main.py  models.py  nginx.conf  pyproject.toml  pytest.ini  render-config.md  render-simple.yaml  render.yaml  requirements-minimal.txt  requirements.txt  run_tests.sh  schemas.py  t; print('pytest disponível')  test_local.py  test_simple.py
.github/workflows/: ci-cd.yml
API-Gerenciamento-escolar-jinja2/: Dockerfile  crud.py  database.py  docker-compose.yml  main.py  models.py  requirements.txt
API-Gerenciamento-escolar-jinja2/templates/: alunos.html  cursos.html  form_aluno.html  form_curso.html  form_professor.html  menu.html  professores.html
api-gerenciamento-bd/: database.py  dockerfile  gerenciamentoEscolar.db  main.py  models.py  requirements.txt  schemas.py
api-gerenciamento-bd/routers/: aluno.py  curso.py  professor.py
app/models/: models.py
app/routes/: alunos.py  auth.py  cursos.py  professores.py
app/schemas/: schemas.py
database/: auth_user.py  database.py  token.py
monitoring/: docker-compose.monitoring.yml  prometheus.yml
templates/: alunos.html  cursos.html  form_aluno.html  form_curso.html  form_professor.html  login.html  menu.html  professores.html  register.html
tests/: __init__.py  test_api.py  test_basic.py  test_simple.py
